Force-app/main/default/Objects/Reports_History_Tracking__c/Reports_History_Tracking__c.object-meta.xml
<CustomObject>
    <label>Reports History Tracking</label>
    <nameField>
        <label>Reports History Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>