Force-app/main/default/Objects/Reports_History_Tracking__c/fields/JSON1__c.field-meta.xml
<CustomField>
    <fullName>JSON1__c</fullName>
    <label>JSON1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>