Force-app/main/default/Objects/Reports_History_Tracking__c/fields/JSON2__c.field-meta.xml
<CustomField>
    <fullName>JSON2__c</fullName>
    <label>JSON2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>