Force-app/main/default/Objects/Reports_History_Tracking__c/fields/JSON3__c.field-meta.xml
<CustomField>
    <fullName>JSON3__c</fullName>
    <label>JSON3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>