Force-app/main/default/Objects/Reports_History_Tracking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ArchivedReports</fullName>
            </value>
            <value>
                <fullName>UnarchivedReports</fullName>
            </value>
            <value>
                <fullName>ReportsCount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>